Fix some CSS problems on Firefox

--- a/style.css
+++ b/style.css
@@ -307,8 +307,8 @@ h1 a {
   margin-left: -101px;
   width: 200px;
   text-align: center;
-  -webkit-transform: rotate(-90deg);
-  -webkit-transform-origin: 50% 50%;
+  transform: rotate(-90deg);
+  transform-origin: 50% 50%;
 }
 
 .playstop {
@@ -726,14 +726,46 @@ h2:first-child {
   margin: 1px 0;
 }
 
+.floatslider::-moz-range-track {
+  display: block;
+  -moz-appearance: none;
+  border: 0;
+  background-color: transparent;
+  background-image: linear-gradient(
+    rgba(0, 0, 0, 0) 4px,
+    #000 4px,
+    #222 8px,
+    #000 8px,
+    #000 9px,
+    rgba(0, 0, 0, 0) 9px
+  );
+  width: 100%;
+  height: 13px;
+  margin: 1px 0;
+}
+
 .floatslider:not(:disabled) {
   cursor: pointer;
+}
+
+.floatslider::-moz-range-thumb {
+  -moz-appearance: none;
+  border: 0;
+  background-color: #666;
+  background-image: radial-gradient(circle, rgba(0, 0, 0, 0.3) 0%, transparent 100%);
+  border-radius: 2px;
+  width: 13px;
+  height: 13px;
+  box-shadow:
+    1px 1px 0.5px rgba(255, 255, 255, 0.3) inset,
+    -1px -1px 0.5px rgba(0, 0, 0, 0.5) inset;
+  transition: background-color 0.2s linear;
 }
 
 .floatslider::-webkit-slider-thumb {
   -webkit-appearance: none;
   background-color: #666;
-  background-image: -webkit-radial-gradient(circle, rgba(0, 0, 0, 0.3) 0%, transparent 100%);
+  background-image: radial-gradient(circle, rgba(0, 0, 0, 0.3) 0%, transparent 100%);
   border-radius: 2px;
   width: 13px;
   height: 13px;
@@ -770,7 +802,7 @@ h2:first-child {
   margin: 1px 0;
   color: #000;
   background-color: #666;
-  background-image: -webkit-radial-gradient(circle, rgba(0, 0, 0, 0.3) 0%, transparent 100%), url(sprites.png);
+  background-image: radial-gradient(circle, rgba(0, 0, 0, 0.3) 0%, transparent 100%), url(sprites.png);
   background-position: 0 0, -61px -16px;
   border-radius: 2px;
   box-shadow:
